# VoIP_sttest

./: .gitignore  pyproject.toml  readme.md
qa_voip_py/SIP/: sip_factory.py  sip_manager.py
qa_voip_py/media/: media.py
voip_sttest/: _implement_call.py  phone.py
voip_sttest/SIP/: sip_factory.py  sip_manager.py
voip_sttest/helpers/: network.py
voip_sttest/media/: media.py
